Define the height parameter for iframe tag in html file instead of css. To cater for different height requirement for youtube and instagram asset.

--- a/src/interests_subpages/interests_PDClassic.html
+++ b/src/interests_subpages/interests_PDClassic.html
@@ -53,7 +53,11 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/Rj4GxcssYcY"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/Rj4GxcssYcY"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 Swimming towards the finish line. You can tell how inexperienced
                 I was by the way I walked (instead of running) to the finish.
