--- a/src/interests_subpages/interests_langkawiSwimFest.html
+++ b/src/interests_subpages/interests_langkawiSwimFest.html
@@ -77,13 +77,21 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/k5EFPBNqBNA"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/k5EFPBNqBNA"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 Me (in green cap) swimming to the finishing line.
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/IwNF_XYWTWc"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/IwNF_XYWTWc"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 Receiving the first place throphy for my category.
               </div>
