--- a/src/interests_subpages/interests_lap1.html
+++ b/src/interests_subpages/interests_lap1.html
@@ -58,7 +58,11 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/2JsA07QJgzw"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/2JsA07QJgzw"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 My first attempt using the Dynamic Bifins (DYNb) pool freediving
                 technique.
