--- a/src/interests_subpages/interests_stoosRidgeHike.html
+++ b/src/interests_subpages/interests_stoosRidgeHike.html
@@ -80,7 +80,11 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/1Q10vIJjWQQ"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/1Q10vIJjWQQ"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 A 360-degree view of one of the many stunning scenes during the
                 hike.
