--- a/src/interests_subpages/interests_swimSquad.html
+++ b/src/interests_subpages/interests_swimSquad.html
@@ -77,7 +77,11 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/vqIRzcOc0aw"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/vqIRzcOc0aw"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 A typical scene after completing a tough swim set – squad
                 members congratulating each other.
