--- a/src/interests_subpages/interests_tripFrance.html
+++ b/src/interests_subpages/interests_tripFrance.html
@@ -56,7 +56,11 @@
               <div class="img-text">View of Paris from Sacré-Coeur.</div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/7yA896IxtH8"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/7yA896IxtH8"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">View at the Gardens of Versails.</div>
             </div>
             <div class="img-wrapper">
