--- a/src/interests_subpages/interests_perhentianChallenge.html
+++ b/src/interests_subpages/interests_perhentianChallenge.html
@@ -50,14 +50,22 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/AqhMGSt5vjE"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/AqhMGSt5vjE"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 Some snapshots of me in action, cruising the stunning waters of
                 Perhentian.
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/nsBNVCjx7kI"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/nsBNVCjx7kI"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 That exhilarating moment of running together towards the finish
                 line.
