--- a/src/interests_subpages/interests_tripSwiss.html
+++ b/src/interests_subpages/interests_tripSwiss.html
@@ -47,7 +47,11 @@
               </div>
             </div>
             <div class="img-wrapper">
-              <iframe src="https://www.youtube.com/embed/ZEUqLW9UYvk"> </iframe>
+              <iframe
+                src="https://www.youtube.com/embed/ZEUqLW9UYvk"
+                height="415px"
+              >
+              </iframe>
               <div class="img-text">
                 View from Jungfraujoch - the top of Europe.
               </div>
