Add interest sub page for malaysia freediving championship

--- a/src/interests_subpages/interests_training_PB.html
+++ b/src/interests_subpages/interests_training_PB.html
@@ -41,8 +41,7 @@
             rewarding. The physical pool sessions, combined with the support of
             amazing teammates and coaches, have made the experience memorable.
             I'm thrilled to have reached a personal milestone of 100 meters in
-            the dynamic no-fins (DNF) discipline. Here’s to everything coming
-            together on competition day!
+            the dynamic no-fins (DNF) discipline.
           </div>
           <div class="card-images">
             <div class="img-wrapper">
