--- a/src/interests.html
+++ b/src/interests.html
@@ -42,12 +42,8 @@
             <div class="card-upcoming-header">Events for this year:</div>
             <ul>
               <li>
-                09 November 2024 <span class="sentence-break">|</span> AIDA
-                Malaysia Freediving Championship
-              </li>
-              <li>
-                07 December 2024 <span class="sentence-break">|</span> PD 10km
-                OWS Competition
+                15 December 2024 <span class="sentence-break">|</span> Deadfish
+                Annual 10km Swim
               </li>
             </ul>
             <div class="card-upcoming-header">Wishlist for future events:</div>
@@ -83,6 +79,44 @@
       <section class="past-activities">
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
+          <a
+            href="interests_subpages/interests_MFC2024.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="ef40bb82-cf50-49e6-be3f-493e52266c39"
+                alt="Group picture with teammates and coaches."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">November 2024</div>
+                <div class="card-past-header">
+                  Malaysia Freediving Championship
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
+            href="interests_subpages/interests_training_PB.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="35b80cf2-e23a-4d66-8f3f-1ca3555db9c2"
+                alt="Group picture with teammates and coaches."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">October 2024</div>
+                <div class="card-past-header">
+                  Freediving Competitive Training and Personal Bests
+                </div>
+              </div>
+            </div>
+          </a>
           <a
             href="interests_subpages/interests_perhentianChallenge.html"
             class="card-past-link"
