Update youtube embedded video link.

--- a/src/interests_subpages/interests_MFC2024.html
+++ b/src/interests_subpages/interests_MFC2024.html
@@ -47,7 +47,7 @@
               />
               <div class="img-text">
                 A memorable group photo with my coaches and teammates taken
-                during the competition
+                during the competition.
               </div>
             </div>
             <div class="img-wrapper">
@@ -63,7 +63,7 @@
             </div>
             <div class="img-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/AqhMGSt5vjE"
+                src="https://www.youtube.com/embed/LEcCPPp0ias"
                 height="415px"
               >
               </iframe>
@@ -86,7 +86,7 @@
             </div>
             <div class="img-wrapper">
               <img
-                id="31d6c541-d82d-4a0f-bb84-445359371ad1"
+                id="IMG_2075_jpg"
                 alt="Receiving prize for winning third overall perfomance"
                 loading="lazy"
               />
