--- a/src/interests_subpages/interests_training_PB.html
+++ b/src/interests_subpages/interests_training_PB.html
@@ -83,7 +83,7 @@
             </div>
             <div class="img-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/AqhMGSt5vjE"
+                src="https://www.youtube.com/embed/-jD6mqvVfcM"
                 height="415px"
               >
               </iframe>
