--- a/src/interests.html
+++ b/src/interests.html
@@ -39,11 +39,31 @@
         <div class="title-text">Upcoming Activities</div>
         <div class="card-upcoming">
           <div class="card-upcoming-text">
-            <div class="card-upcoming-header">Events for this year:</div>
+            <div class="card-upcoming-header">Upcoming Events:</div>
             <ul>
               <li>
                 15 December 2024 <span class="sentence-break">|</span> Deadfish
                 Annual 10km Swim
+              </li>
+              <li>
+                May 2025 <span class="sentence-break">|</span> Kapas Marang
+                Swimathon
+              </li>
+              <li>
+                August 2025 <span class="sentence-break">|</span> Bosphorus
+                Cross-Continental Swim
+              </li>
+              <li>
+                September 2025 <span class="sentence-break">|</span> Malaysia
+                Freediving Pool Games
+              </li>
+              <li>
+                November 2025 <span class="sentence-break">|</span> Malaysia
+                Freediving Championship
+              </li>
+              <li>
+                November 2025 <span class="sentence-break">|</span> Phuket
+                Half-Marathon Oceanman
               </li>
             </ul>
             <div class="card-upcoming-header">Wishlist for future events:</div>
