Update home page to include new special interest in freediving.

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,9 @@
             <a href="./projects.html">here</a>.
           </p>
           <p>
-            I love swimming and have participated in open water swimming events
-            and competitions. Check out my past and upcoming activities
+            "I’m an open water swimmer and a pool freediving athlete — I love
+            the water and have participated in various events and competitions.
+            Check out my past and upcoming activities
             <a href="./interests.html">here</a>.
           </p>
           <div class="contact-links">
