Update interest page to update list of upcoming events.

--- a/src/interests.html
+++ b/src/interests.html
@@ -42,20 +42,12 @@
             <div class="card-upcoming-header">Upcoming Events:</div>
             <ul>
               <li>
-                15 December 2024 <span class="sentence-break">|</span> Deadfish
-                Annual 10km Swim
+                1 May 2025 <span class="sentence-break">|</span> Ultimate
+                Freediving Challenge IX - Singapore
               </li>
               <li>
-                May 2025 <span class="sentence-break">|</span> Kapas Marang
-                Swimathon
-              </li>
-              <li>
-                August 2025 <span class="sentence-break">|</span> Bosphorus
-                Cross-Continental Swim
-              </li>
-              <li>
-                September 2025 <span class="sentence-break">|</span> Malaysia
-                Freediving Pool Games
+                25 June 2025 <span class="sentence-break">|</span> AIDA
+                Freediving World Championship - Wakayama
               </li>
               <li>
                 November 2025 <span class="sentence-break">|</span> Malaysia
