Update interest with new sub-interest card for DNF workshop.

--- a/src/interests.html
+++ b/src/interests.html
@@ -92,6 +92,23 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_DFNWorkshop.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="f1ac2bd2ad211b23745a073df3dc3d01"
+                alt="Group picture with Ben - by the pool"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">December 2024</div>
+                <div class="card-past-header">DNF Workshop with Ben Wong</div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_MFC2024.html"
             class="card-past-link"
           >
