Final touchup and correcting typos.

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
             <a href="./projects.html">here</a>.
           </p>
           <p>
-            "I’m an open water swimmer and a pool freediving athlete — I love
-            the water and have participated in various events and competitions.
+            I’m an open water swimmer and a pool freediving athlete — I love the
+            water and have participated in various events and competitions.
             Check out my past and upcoming activities
             <a href="./interests.html">here</a>.
           </p>
