Webpack built for new interest subpages.

--- a/src/interests_subpages/interests_DNFWorkshop.html
+++ b/src/interests_subpages/interests_DNFWorkshop.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="../styles/interests_sub_pages.css" />
-    <title>Ibrahim's | Interests - Malaysia Freediving Championship</title>
+    <title>Ibrahim's | Interests - DNF Class</title>
   </head>
   <body>
     <header>
