--- a/src/interests.html
+++ b/src/interests.html
@@ -92,6 +92,23 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_Deadfish10k.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="8589bda3-ce65-411f-94b4-e58e811b43a4"
+                alt="Group picture with clubmates by the lake."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">December 2024</div>
+                <div class="card-past-header">Deadfish 10km Endurance Swim</div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_DNFWorkshop.html"
             class="card-past-link"
           >
