--- a/src/interests_subpages/interests_kapasMarangSwimathon.html
+++ b/src/interests_subpages/interests_kapasMarangSwimathon.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
         <ul>
-          <li><a href="../home.html" id="home">Home</a></li>
+          <li><a href="../index.html" id="home">Home</a></li>
           <li><a href="../career.html" id="career">Career</a></li>
           <li><a href="../projects.html" id="projects">Projects</a></li>
           <li><a href="../interests.html" id="interests">Interests</a></li>
