Add new interest sub page for personal best and unofficial national record.

--- a/src/interests.html
+++ b/src/interests.html
@@ -92,6 +92,25 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_PB_NR.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="Screenshot 2025-03-30 105001_jpg"
+                alt="Picture of underwater swim in a pool"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">Feb 2025</div>
+                <div class="card-past-header">
+                  Personal Bests and (Unofficial) National Record
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_Deadfish10k.html"
             class="card-past-link"
           >
