Adjust some wording in the subpage, update webpack, and execute npm build.

--- a/src/interests_subpages/interests_PB_NR.html
+++ b/src/interests_subpages/interests_PB_NR.html
@@ -49,8 +49,8 @@
               >
               </iframe>
               <div class="img-text">
-                My first time reaching a 125m dive—and setting an (unofficial)
-                national record at 118m!
+                My first time reaching a 125m dive—surpassing the national
+                record of 118m, though unofficial as it was done in training.
               </div>
             </div>
             <div class="img-wrapper">
