--- a/src/interests.html
+++ b/src/interests.html
@@ -92,6 +92,23 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_PenangPoolGames.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="Screenshot 2025-02-05 183207_jpg"
+                alt="Event poster for Penang Freediving Pool Games"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">March 2025</div>
+                <div class="card-past-header">Penang Freediving Pool Games</div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_PB_NR.html"
             class="card-past-link"
           >
