--- a/src/interests.html
+++ b/src/interests.html
@@ -42,10 +42,6 @@
             <div class="card-upcoming-header">Upcoming Events:</div>
             <ul>
               <li>
-                1 May 2025 <span class="sentence-break">|</span> Ultimate
-                Freediving Challenge IX - Singapore
-              </li>
-              <li>
                 25 June 2025 <span class="sentence-break">|</span> AIDA
                 Freediving World Championship - Wakayama
               </li>
@@ -91,6 +87,23 @@
       <section class="past-activities">
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
+          <a
+            href="interests_subpages/interests_SingaporeUFC.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="Screenshot 2025-03-30 101529"
+                alt="Event poster for Singapore UFC IX"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">May 2025</div>
+                <div class="card-past-header">Singapore UFC IX</div>
+              </div>
+            </div>
+          </a>
           <a
             href="interests_subpages/interests_PenangPoolGames.html"
             class="card-past-link"
