Update project page. Correcting some broken image.

--- a/src/projects.html
+++ b/src/projects.html
@@ -63,7 +63,11 @@
                 href="https://www.datacamp.com/completed/statement-of-accomplishment/track/3375f83124faf050a5e69042bed3c37af29ba146/"
                 target="_blank"
               >
-                <img alt="Link to personal website" id="web" />
+                <img
+                  alt="Link to personal website"
+                  id="web"
+                  src="./assets/projects/web.svg"
+                />
               </a>
             </div>
           </div>
@@ -90,10 +94,18 @@
                 href="https://github.com/search?q=owner%3Aibrahimcode85%20%20topic%3Aodin&type=repositories"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a href="https://www.theodinproject.com/about" target="_blank">
-                <img alt="Link to personal website" id="web" />
+                <img
+                  alt="Link to personal website"
+                  id="web"
+                  src="./assets/projects/web.svg"
+                />
               </a>
             </div>
           </div>
@@ -102,6 +114,52 @@
       <section class="personal-projects">
         <div class="title-text">Personal Projects</div>
         <div class="card-projects-wrapper">
+          <div class="card-projects">
+            <img
+              alt="Image of flood map in Malaysia"
+              class="card-projects-img"
+              id="img_geospatial_proj"
+            />
+            <div class="card-projects-text">
+              <div class="card-projects-header">
+                Exploring Flood Exposure with Geospatial Analysis
+              </div>
+              <p>
+                An exploratory project applying geospatial analysis to assess
+                flood exposure across Malaysia. Inspired by an industry
+                engagement session on climate risk stress testing hosted by Bank
+                Negara Malaysia, the analysis demonstrates how spatial data can
+                be used to identify vulnerable areas and quantify exposure
+                patterns.
+              </p>
+            </div>
+            <div class="card-projects-tags-wrapper">
+              <span class="tag python-tag">Python</span>
+              <span class="tag jupyter-tag">Jupyter Notebook</span>
+            </div>
+            <div class="card-projects-links">
+              <a
+                href="https://github.com/ibrahimcode85/geospatial_analysis"
+                target="_blank"
+              >
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
+              </a>
+              <a
+                href="https://www.datacamp.com/datalab/w/cf1447d2-c961-4c50-9353-2b947deb5ac7/report/flood_exposure.ipynb"
+                target="_blank"
+              >
+                <img
+                  alt="Link to project notebook"
+                  id="jupyter"
+                  src="./assets/projects/jupyter-icon.png"
+                />
+              </a>
+            </div>
+          </div>
           <div class="card-projects">
             <img
               alt="3D image of cashflows applications"
@@ -132,13 +190,21 @@
                 href="https://github.com/ibrahimcode85/life_cashflow_app"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a
                 href="https://github.com/ibrahimcode85/life_cashflow_app/releases/download/v1.0.0-beta/life_cashflow_app-win32-x64-1.0.0.zip"
                 target="_blank"
               >
-                <img alt="Link to installer" id="disk" />
+                <img
+                  alt="Link to installer"
+                  id="disk"
+                  src="./assets/projects/zip-disk.svg"
+                />
               </a>
             </div>
           </div>
@@ -170,10 +236,18 @@
                 href="https://github.com/ibrahimcode85/Personal_Webpage"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a href="https://www.ibrahim-ahmad.com" target="_blank">
-                <img alt="Link to website" id="web" />
+                <img
+                  alt="Link to website"
+                  id="web"
+                  src="./assets/projects/web.svg"
+                />
               </a>
             </div>
           </div>
@@ -206,13 +280,21 @@
                 href="https://github.com/ibrahimcode85/todo_app"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a
                 href="https://github.com/ibrahimcode85/todo_app/releases/download/v1.0.0/todo_app-win32-x64.zip"
                 target="_blank"
               >
-                <img alt="Link to installer" id="disk" />
+                <img
+                  alt="Link to installer"
+                  id="disk"
+                  src="./assets/projects/zip-disk.svg"
+                />
               </a>
             </div>
           </div>
@@ -237,20 +319,28 @@
             </div>
             <div class="card-projects-tags-wrapper">
               <span class="tag python-tag">Python</span>
-              <span class="tag github-tag">Jupyter Notebook</span>
+              <span class="tag jupyter-tag">Jupyter Notebook</span>
             </div>
             <div class="card-projects-links">
               <a
                 href="https://github.com/ibrahimcode85/predicting_insurance_charges"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a
                 href="https://www.datacamp.com/datalab/w/401ff409-a0ef-4187-b677-7b65b5761203/report/notebook_v2.ipynb"
                 target="_blank"
               >
-                <img alt="Link to project notebook" id="jupyter" />
+                <img
+                  alt="Link to project notebook"
+                  id="jupyter"
+                  src="./assets/projects/jupyter-icon.png"
+                />
               </a>
             </div>
           </div>
@@ -274,24 +364,32 @@
             </div>
             <div class="card-projects-tags-wrapper">
               <span class="tag python-tag">Python</span>
-              <span class="tag github-tag">GitHub</span>
+              <span class="tag jupyter-tag">Jupyter Notebook</span>
             </div>
             <div class="card-projects-links">
               <a
                 href="https://github.com/ibrahimcode85/improving_customer_segmentation"
                 target="_blank"
               >
-                <img alt="Link to GitHub repository" id="github-mark" />
+                <img
+                  alt="Link to GitHub repository"
+                  class="github-mark"
+                  src="./assets/home/github-mark.png"
+                />
               </a>
               <a
                 href="https://www.datacamp.com/datalab/w/6a240b08-b076-4f36-99f5-65efb4570da7"
                 target="_blank"
               >
-                <img alt="Link to project notebook" id="jupyter" />
+                <img
+                  alt="Link to project notebook"
+                  id="jupyter"
+                  src="./assets/projects/jupyter-icon.png"
+                />
               </a>
             </div>
           </div>
-          <div class="card-projects-placeholder">
+          <!-- <div class="card-projects-placeholder">
             <img
               alt="coming soon"
               class="card-projects-img"
@@ -303,7 +401,7 @@
               </div>
               <p></p>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="future-exploration">
