--- a/src/interests.html
+++ b/src/interests.html
@@ -42,10 +42,6 @@
             <div class="card-upcoming-header">Upcoming Events:</div>
             <ul>
               <li>
-                25 June 2025 <span class="sentence-break">|</span> AIDA
-                Freediving World Championship - Wakayama
-              </li>
-              <li>
                 November 2025 <span class="sentence-break">|</span> Malaysia
                 Freediving Championship
               </li>
@@ -87,6 +83,25 @@
       <section class="past-activities">
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
+          <a
+            href="interests_subpages/interests_WakayamaPoolChampionship.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="Screenshot 2025-03-31 133807_jpg"
+                alt="Event poster for AIDA World Championship 2025"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">June 2025</div>
+                <div class="card-past-header">
+                  AIDA Freediving World Championship, Wakayama
+                </div>
+              </div>
+            </div>
+          </a>
           <a
             href="interests_subpages/interests_SingaporeUFC.html"
             class="card-past-link"
