--- a/src/interests.html
+++ b/src/interests.html
@@ -84,6 +84,23 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_tripJapan.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="IMG_0291(1)"
+                alt="Japanese garden in Koyasan"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">June 2025</div>
+                <div class="card-past-header">Trip to Japan</div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_WakayamaPoolChampionship.html"
             class="card-past-link"
           >
