Update for new interest page - Malaysia Pool Challenge.

--- a/src/interests.html
+++ b/src/interests.html
@@ -84,6 +84,25 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_bayanPoolChallenge.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="Screenshot 2025-05-18 203543"
+                alt="Event poster for Malaysia Pool Challenge"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">July 2025</div>
+                <div class="card-past-header">
+                  Malaysia Freediving Pool Challenge
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_tripJapan.html"
             class="card-past-link"
           >
