Update new event card for MFPG competition.

--- a/src/interests.html
+++ b/src/interests.html
@@ -42,12 +42,12 @@
             <div class="card-upcoming-header">Upcoming Events:</div>
             <ul>
               <li>
-                November 2025 <span class="sentence-break">|</span> Malaysia
-                Freediving Championship
+                Jan 2026 <span class="sentence-break">|</span> Training With
+                Fatima Korok (World Record Holder)
               </li>
               <li>
-                November 2025 <span class="sentence-break">|</span> Phuket
-                Half-Marathon Oceanman
+                June 2026 <span class="sentence-break">|</span> Pool Freediving
+                World Championship (Budapest)
               </li>
             </ul>
             <div class="card-upcoming-header">Wishlist for future events:</div>
@@ -83,6 +83,26 @@
       <section class="past-activities">
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
+          <a
+            href="interests_subpages/interests_MFPG_Penang.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="DSC03510"
+                alt="White card received, marking the break of the previous national
+                record."
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">Dec 2025</div>
+                <div class="card-past-header">
+                  MFPG Penang — Breaking Previous National Record (125m)
+                </div>
+              </div>
+            </div>
+          </a>
           <a
             href="interests_subpages/interests_bayanPoolChallenge.html"
             class="card-past-link"
