Add new card for 2025 DNF Project reflection.

--- a/src/interests.html
+++ b/src/interests.html
@@ -84,6 +84,25 @@
         <div class="title-text">Past Activities</div>
         <div class="card-past-wrapper">
           <a
+            href="interests_subpages/interests_DNF2025.html"
+            class="card-past-link"
+          >
+            <div class="card-past">
+              <img
+                id="DSC03678"
+                alt="Underwater picture of DNF diving"
+                class="card-past-img"
+                loading="lazy"
+              />
+              <div class="card-past-text">
+                <div class="date">Dec 2025</div>
+                <div class="card-past-header">
+                  Closing the 2025 DNF Project — A Season in Review
+                </div>
+              </div>
+            </div>
+          </a>
+          <a
             href="interests_subpages/interests_MFPG_Penang.html"
             class="card-past-link"
           >
